added activity thumb
